Use available ports for replay server
Fixes #792

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -439,8 +439,7 @@ achievements.mostRecent=Most recent
 achievements.loading=Loading achievements…
 achievements.unlocked=Unlocked ({0,number,#})
 achievements.locked=Open ({0,number,#})
-
-replayServer.listeningFailed=Replay server could not be started on port {0,number,#}
+replayServer.listeningFailed=Replay server could not be started
 replayServer.retry=Retry
 replayServer.unreachable=Replay server is not reachable, game can't be recorded.
 corruptedMods.notification=Mod is corrupt and can''t be loaded: {0}.
