--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -272,7 +272,7 @@ achievements.mostRecent=Neuste Errungenschaften
 achievements.loading=Lade Errungenschaften…
 achievements.unlocked=Freigeschaltet ({0,number,#})
 achievements.locked=Offen ({0,number,#})
-replayServer.listeningFailed=Replay-Server konnte nicht auf Port {0,number,#} gestartet werden
+replayServer.listeningFailed=Replay-Server konnte nicht gestartet werden
 replayServer.retry=Erneut versuchen
 corruptedMods.notification=Mod ist beschädigt und konnte nicht geladen werden: {0}.
 corruptedMods.show=Anzeigen
