#535 Add Czech and French

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -476,6 +476,8 @@ settings.languages.system=Auto
 settings.languages.german=German
 settings.languages.russian=Russian
 settings.languages.english=English
+settings.languages.czech=Czech
+settings.languages.french=French
 settings.time.system=Auto
 settings.time.12=12h
 settings.time.24=24h
