--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -45,7 +45,7 @@ play.ranked1v1=1v1 ranked match
 play.coop=Co-Op
 
 leaderboard.failedToLoad=Leaderboard could not be loaded
-leaderboard.loading=Loading leaderboard\u2026
+leaderboard.loading=Loading leaderboard…
 coop.host.title=Host this Mission
 coop.host.button=Host Game
 coop.leaderboard=Leaderboard
@@ -82,17 +82,17 @@ ranked1v1.ratingHint.top=Congratulations! You're a top player. Share your knowle
 ranked1v1.gamesPlayed=Games played
 ranked1v1.ranking=Your rank
 ranked1v1.rankingOutOf=out of {0,number,#} players
-ranked1v1.searching=Searching for opponent\u2026
+ranked1v1.searching=Searching for opponent…
 ranked1v1.winLossRation=Win/loss ratio
 ranked1v1.rankingFormat=#{0,number,#}
 ranked1v1.notification.title=1v1 ranked match available
 ranked1v1.notification.message=Click here to open the 1v1 tab
 
 statusBar.chatConnected=Chat connected
-statusBar.chatConnecting=Connecting to chat\u2026
+statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
 statusBar.fafConnected=FAF connected
-statusBar.fafConnecting=Connecting to FAF\u2026
+statusBar.fafConnecting=Connecting to FAF…
 statusBar.fafDisconnected=FAF disconnected
 statusBar.reconnect=Reconnect
 statusBar.taskWithoutMessage.format={0}
@@ -103,8 +103,8 @@ news.authoredFormat={0} on {1,date}
 chat.noOpenChats=No chats are open
 chat.joinAChannel=Join a channel
 chat.channelNamePrompt=e.g. #aeolus
-chat.messagePrompt=Type a message\u2026
-chat.searchPrompt=Search\u2026
+chat.messagePrompt=Type a message…
+chat.searchPrompt=Search…
 chat.category.moderators=Moderators
 chat.category.friends=Friends
 chat.category.foes=Foes
@@ -122,12 +122,12 @@ chat.userContext.viewLiveReplay=Watch game
 chat.userContext.joinGame=Join game
 chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
-chat.userContext.kick=Kick\u2026
-chat.userContext.ban=Ban\u2026
-chat.sendMessageTask.title=Sending chat message\u2026
-chat.sendActionTask.title=Sending chat action\u2026
+chat.userContext.kick=Kick…
+chat.userContext.ban=Ban…
+chat.sendMessageTask.title=Sending chat message…
+chat.sendActionTask.title=Sending chat action…
 chat.clanTagFormat=[{0}]
-chat.imageUploadTask.title=Uploading image\u2026
+chat.imageUploadTask.title=Uploading image…
 chat.userCount={0,number,#} users (type to search)
 chat.mapName=Map Name: {0}
 chat.filter.filter=Filter
@@ -173,7 +173,7 @@ game.create.rating=Desired rating
 game.create.deselectAll=Deselect all
 game.create.reload=Reload
 game.create.create=Create
-game.create.searchMap=Search\u2026
+game.create.searchMap=Search…
 game.create.gameType=Game type
 game.create.mods=Mods
 game.create.titleMissing=Title is missing
@@ -251,8 +251,7 @@ game.idFormat=#{0,number,#}
 game.lineUp=Line-up
 featuredMod.displayName=Game mod name
 featuredMod.technicalName=Game mod short name
-
-ladder.searchPrompt=Search rank or player\u2026
+ladder.searchPrompt=Search rank or player…
 
 login.title=FA Forever Login
 login.name=Username
@@ -262,7 +261,7 @@ login.create=Create Account
 login.forgot=Forgot login
 login.button.login=Login
 login.button.cancel=Cancel
-login.progress.message=Logging in\u2026
+login.progress.message=Logging in…
 login.serverHost=Server host
 login.replayServerHost=Replay server host
 login.apiBaseUrl=API base URL
@@ -272,13 +271,13 @@ vault.mods=Mods
 vault.onlineReplays=Online Replays
 vault.localReplays=Local Replays
 vault.liveReplays=Live Replays
-vault.replays.loading=Loading replays\u2026
+vault.replays.loading=Loading replays…
 vault.replays.newest=Most Recent
 vault.replays.highestRated=Highest Rated
 vault.replays.displayQuery=Display search query
 vault.replays.queryPrompt=Build a query above or enter one manually
 vault.replays.searchError=An error has occurred while searching for replays.
-vault.more=More\u2026
+vault.more=More…
 modVault.newestMods=Most recent
 modVault.highestRated=Highest rated
 modVault.highestRatedUiMods=Recommended UI mods
@@ -286,28 +285,28 @@ modVault.install=Install
 modVault.uninstall=Uninstall
 modVault.installationFailed=Mod ''{0}'' could not be installed: {1}
 modVault.couldNotDeleteMod=Mod ''{0}'' could not be deleted: {1}
-modVault.loadingMods=Loading mods\u2026
+modVault.loadingMods=Loading mods…
 modVault.upload.chooseDirectory=Choose mod directory
-modVault.upload=Upload mod\u2026
+modVault.upload=Upload mod…
 modVault.upload.title=Upload mod
 modVault.upload.hint=Values are read from mod_info.lua
 modVault.upload.modVersion=Version
 modVault.upload.modUid=UID
 modVault.upload.uploadNow=Upload now
-modVault.upload.uploading=Uploading mod\u2026
+modVault.upload.uploading=Uploading mod…
 modVault.upload.complete=Upload complete
 modVault.upload.failed=Mod upload failed. Server gave the following errors:\n\n{0}
 modVault.upload.retry=Retry
-modVault.upload.compressing=Compressing mod\u2026
+modVault.upload.compressing=Compressing mod…
 
 mapVault.upload.title=Upload map
 mapVault.upload.hint=Values were read from *_scenario.lua
 mapVault.upload.mapVersion=Version
-mapVault.upload.reading=Reading map\u2026
-mapVault.upload=Upload map\u2026
+mapVault.upload.reading=Reading map…
+mapVault.upload=Upload map…
 mapVault.upload.uploadNow=Upload now
-mapVault.upload.uploading=Uploading map\u2026
-mapVault.upload.compressing=Compressing map\u2026
+mapVault.upload.uploading=Uploading map…
+mapVault.upload.compressing=Compressing map…
 mapVault.upload.complete=Upload complete
 mapVault.upload.complete.hint=WARNING: Since the server may have renamed your files, it's strongly recommended that you remove your map from the map folder and instead install it using the map vault.
 mapVault.upload.failed=Map could not be uploaded. Server gave the following errors:\n\n{0}
@@ -318,7 +317,7 @@ mapVault.upload.sizeFormat={0,number,#}km x {1,number,#}km
 mapVault.upload.playersFormat={0,number,#}
 mapVault.upload.rankedConfirm=I confirm that this map is properly balanced and does not contain prohibited code. I'm aware that a violation results in a ban. Unchecking this results in an unranked map.
 mapVault.upload.retry=Retry
-mapVault.loadingMaps=Loading maps\u2026
+mapVault.loadingMaps=Loading maps…
 mapVault.mostLikedMaps=Most liked
 mapVault.newestMaps=Most recent
 mapVault.mostPlayed=Most played
@@ -357,10 +356,9 @@ map.noDescriptionAvailable=The author did not provide a description
 mapPreview.name=Map Name: {0}
 mapPreview.size={0,number,#} x {1,number,#}
 mapPreview.loadFailure.message=Map preview could not be loaded
-
-replays.loadingOnlineTask.title=Loading online replays\u2026
+replays.loadingOnlineTask.title=Loading online replays…
 replays.loadingOnlineTask.failed=Online replays could not be loaded.
-replays.loadingLocalTask.title=Loading local replays\u2026
+replays.loadingLocalTask.title=Loading local replays…
 replays.loadingLocalTask.failed=Local replays could not be loaded.
 replays.live.loadFailure.title=Could not load live replays
 replays.live.loadFailure.message=The live replay has failed to launch
@@ -369,8 +367,7 @@ tutorial.map=Map
 tutorial.title=Title
 tutorial.length=Length
 tutorial.description=Description
-
-chat.connecting.message=Connecting to chat\u2026
+chat.connecting.message=Connecting to chat…
 updater.binary.taskTitle=Preparing game files
 updater.git.progressFormat={0} ({1,number,#}/{2,number,#})
 updater.git.checkingOut=Preparing game files
@@ -393,7 +390,7 @@ downloadingModTask.downloading=Downloading mod {0}
 downloadingModTask.unzipping=Unzipping mod to {0}
 
 missingGamePath.notification=Forged Alliance could not be located
-missingGamePath.locate=Locate\u2026
+missingGamePath.locate=Locate…
 missingGamePath.chooserTitle=Locate the Forged Alliance directory
 
 notifications.empty=You don't have any notifications
@@ -437,7 +434,7 @@ user.status.playing=Playing: {0}
 
 achievement.stepsFormat={0,number,#}/{1,number,#}
 achievements.mostRecent=Most recent
-achievements.loading=Loading achievements\u2026
+achievements.loading=Loading achievements…
 achievements.unlocked=Unlocked ({0,number,#})
 achievements.locked=Open ({0,number,#})
 
@@ -519,7 +516,7 @@ settings.fa.executableDecorator=Command line format for executable
 settings.fa.executionDirectory=Execution directory
 settings.fa.advanced=Advanced
 settings.fa.useDefault=Use default directory
-settings.fa.chooseDirectory=Choose\u2026
+settings.fa.chooseDirectory=Choose…
 settings.general.theme=Theme
 settings.notifications.friendOnline=Friend online
 settings.notifications.friendJoinsGame=Friend joins game
@@ -534,7 +531,7 @@ settings.account.newPassword=New Password
 settings.account.newPassword.empty=The new password must not be empty.
 settings.account.confirmPassword=Confirm Password
 settings.account.confirmPassword.mismatch=The new password and the confirmation do not match.
-settings.account.changePassword.changing=Your password is being changed\u2026
+settings.account.changePassword.changing=Your password is being changed…
 settings.account.changePassword.success=Your password was changed.
 settings.account.changePassword.error=Your password was not changed due to an error ({0}).
 settings.account.steamAccount=Steam Account Linking
