--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -18,7 +18,7 @@ main.play=Spielen
 main.units=Einheiten
 
 leaderboard.failedToLoad=Rangliste konnte nicht geladen werden
-leaderboard.loading=Lade Rangliste\u2026
+leaderboard.loading=Lade Rangliste…
 
 ranked1v1.you=Du
 ranked1v1.players=Spieler (mit mindestens {0} Spielen)
@@ -39,16 +39,16 @@ ranked1v1.ratingHint.top=Glückwunsch! Du bist ein Spitzenspieler. Teile dein Wi
 ranked1v1.gamesPlayed=Gespielte Spiele
 ranked1v1.ranking=Dein Rang
 ranked1v1.rankingOutOf=von {0,number,#} Spielern
-ranked1v1.searching=Suche nach Gegner\u2026
+ranked1v1.searching=Suche nach Gegner…
 ranked1v1.winLossRation=Gewonnen/Verloren Verhältnis
 ranked1v1.notification.title=1v1 Spiel verfügbar
 ranked1v1.notification.message=Klicke hier, um die 1v1 Ansicht zu öffnen
 
 statusBar.chatConnected=Chat verbunden
-statusBar.chatConnecting=Verbinde mit Chat\u2026
+statusBar.chatConnecting=Verbinde mit Chat…
 statusBar.chatDisconnected=Chat getrennt
 statusBar.fafConnected=FAF verbunden
-statusBar.fafConnecting=Verbinde mit FAF\u2026
+statusBar.fafConnecting=Verbinde mit FAF…
 statusBar.fafDisconnected=FAF getrennt
 statusBar.reconnect=Erneut verbinden
 news.authoredFormat={0} am {1,date}
@@ -56,8 +56,8 @@ news.authoredFormat={0} am {1,date}
 chat.noOpenChats=Keine offenen Chats
 chat.joinAChannel=Trete einem Kanal bei
 chat.channelNamePrompt=z. B. #aeolus
-chat.messagePrompt=Schreibe eine Nachricht\u2026
-chat.searchPrompt=Suche\u2026
+chat.messagePrompt=Schreibe eine Nachricht…
+chat.searchPrompt=Suche…
 chat.category.moderators=Moderatoren
 chat.category.friends=Freunde
 chat.category.foes=Foes
@@ -75,11 +75,11 @@ chat.userContext.viewLiveReplay=Dem Spiel zuschauen
 chat.userContext.joinGame=Spiel beitreten
 chat.userContext.viewReplays=Zeige replays
 chat.userContext.inviteToGame=Zu Spiel einladen
-chat.userContext.kick=Kicken\u2026
-chat.userContext.ban=Bannen\u2026
-chat.sendMessageTask.title=Sende Chat Nachricht\u2026
-chat.sendActionTask.title=Sende Chat Aktion\u2026
-chat.imageUploadTask.title=Lade Bild hoch\u2026
+chat.userContext.kick=Kicken…
+chat.userContext.ban=Bannen…
+chat.sendMessageTask.title=Sende Chat Nachricht…
+chat.sendActionTask.title=Sende Chat Aktion…
+chat.imageUploadTask.title=Lade Bild hoch…
 chat.userCount={0,number,#} Benutzer (Tippe um zu suchen)
 chat.mapName=Kartenname: {0}
 chat.filter.filter=Filter
@@ -109,7 +109,7 @@ game.create.deselectAll=Alle abwählen
 
 game.create.reload=Neu laden
 game.create.create=Erstellen
-game.create.searchMap=Suchen\u2026
+game.create.searchMap=Suchen…
 game.create.gameType=Spieltyp
 game.create.modVersions=Mods
 game.create.titleMissing=Titel fehlt
@@ -136,8 +136,7 @@ game.join.passwordWrong=Falsches Passwort
 game.start.couldNotStart=Das Spiel konnte nicht gestartet werden. Siehe Fehlermeldung unten.
 game.full=Spiel ist voll
 game.full.action=Klicke um das Spiel zu öffnen
-
-ladder.searchPrompt=Suche Rang oder Spieler\u2026
+ladder.searchPrompt=Suche Rang oder Spieler…
 
 login.title=FA Forever Anmeldung
 login.name=Benutzername
@@ -147,7 +146,7 @@ login.create=Konto erstellen
 login.forgot=Anmeldedaten vergessen
 login.button.login=Anmelden
 login.button.cancel=Abbrechen
-login.progress.message=Anmelden\u2026
+login.progress.message=Anmelden…
 login.serverHost=Server Host
 login.replayServerHost=Replayserver Host
 login.apiBaseUrl=API Basis-URL
@@ -161,28 +160,28 @@ modVault.install=Installieren
 modVault.uninstall=Deinstallieren
 modVault.installationFailed=Mod ''{0}'' konnte nicht installiert werden: {1}
 modVault.couldNotDeleteMod=Mod ''{0}'' konnte nicht gelöscht werden: {1}
-modVault.loadingMods=Lade Mods\u2026
+modVault.loadingMods=Lade Mods…
 modVault.upload.chooseDirectory=Wähle den Speicherort der Mod
-modVault.upload=Mod hochladen\u2026
+modVault.upload=Mod hochladen…
 modVault.upload.title=Mod hochladen
 modVault.upload.hint=Werte werden aus mod_info.lua gelesen
 modVault.upload.modVersionVersion=Version
 modVault.upload.modUid=UID
 modVault.upload.uploadNow=Jetzt hochladen
-modVault.upload.uploading=Mod wird hochgeladen\u2026
+modVault.upload.uploading=Mod wird hochgeladen…
 modVault.upload.complete=Hochladen abgeschlossen
 modVault.upload.failed=Mod konnte nicht hochgeladen werden. Der Server meldete folgende Fehler:\n\n{0}
 modVault.upload.retry=Erneut versuchen
-modVault.upload.compressing=Komprmiere Mod\u2026
+modVault.upload.compressing=Komprmiere Mod…
 
 mapVault.upload.title=Karte hochladen
 mapVault.upload.hint=Werte wurden aus *_scenario.lua gelesen
 mapVault.upload.mapVersion=Version
-mapVault.upload.reading=Lese Karte\u2026
-mapVault.upload=Karte hochladen\u2026
+mapVault.upload.reading=Lese Karte…
+mapVault.upload=Karte hochladen…
 mapVault.upload.uploadNow=Jetzt hochladen
-mapVault.upload.uploading=Karte wird hochgeladen\u2026
-mapVault.upload.compressing=Komprimiere Karte\u2026
+mapVault.upload.uploading=Karte wird hochgeladen…
+mapVault.upload.compressing=Komprimiere Karte…
 mapVault.upload.complete=Hochladen abgeschlossen
 mapVault.upload.complete.hint=WARNUNG: Da der Server deine Dateien möglicherweise umbenannt hat, wird dringend empfohlen, deine Map zu entfernen und sie stattdessen via Vault zu installieren.
 mapVault.upload.failed=Karte konnte nicht hochgeladen werden. Der Server meldete folgende Fehler:\n\n{0}
@@ -192,7 +191,7 @@ mapVault.upload.chooseDirectory=Wähle den Speicherort der Karte
 mapVault.upload.sizeFormat={0,number,#}km x {1,number,#}km
 mapVault.upload.rankedConfirm=Ich bestätige, dass die Karte ausgeglichen ist und keinen verbotenen Code enthält. Ich bin mir bewusst, dass ein Verston einen Bann zur Folge hat. Beim Abwählen dieser Option werden Spiele auf dieser Karte nicht bewertet.
 mapVault.upload.retry=Erneut versuchen
-mapVault.loadingMaps=Lade Karte\u2026
+mapVault.loadingMaps=Lade Karte…
 mapVault.newestMaps=Am neuesten
 mapVault.uninstall=Deinstallieren
 modVersion.description=Beschreibung
@@ -210,10 +209,9 @@ map.updated=Aktualisiert
 mapPreview.name=Kartenname: {0}
 mapPreview.size=Kartengröße: {0,number,#}km x {1,number,#}km
 mapPreview.loadFailure.message=Kartenvorschau konnte nicht geladen werden
-
-replays.loadingOnlineTask.title=Lade Online-Replays\u2026
+replays.loadingOnlineTask.title=Lade Online-Replays…
 replays.loadingOnlineTask.failed=Online-Replays konnten nicht geladen werden.
-replays.loadingLocalTask.title=Lade lokale Replays\u2026
+replays.loadingLocalTask.title=Lade lokale Replays…
 replays.loadingLocalTask.failed=Lokale Replays konnten nicht geladen werden.
 replays.live.loadFailure.title=Live-Replays konnten nicht geladen werden
 replays.live.loadFailure.message=Das Live-Replay konnte nicht gestartet werden
@@ -222,7 +220,7 @@ tutorial.map=Karte
 tutorial.title=Titel
 tutorial.length=Länge
 tutorial.description=Beschreibung
-chat.connecting.message=Verbinde mit Chat\u2026
+chat.connecting.message=Verbinde mit Chat…
 clientUpdateAvailable.notification=Client {0} ist verfügbar ({1})
 clientUpdateAvailable.downloadAndInstall=Herunterladen
 clientUpdateAvailable.releaseNotes=Versionshinweise
@@ -238,7 +236,7 @@ downloadingModTask.downloading=Lade Mod {0} herunter
 downloadingModTask.unzipping=Entpacke Mod nach {0}
 
 missingGamePath.notification=Forged Alliance konnte nicht gefunden werden
-missingGamePath.locate=Lokalisieren\u2026
+missingGamePath.locate=Lokalisieren…
 missingGamePath.chooserTitle=Wähle dein Forged Alliance Verzeichnis
 
 notifications.empty=Du hast keine Benachrichtigungen
@@ -269,7 +267,7 @@ userInfo.achievements=Errungenschaften
 userInfo.ratingFormat=Globales Rating: {0,number,#}\nRanglisten Rating: {1,number,#}
 
 achievements.mostRecent=Neuste Errungenschaften
-achievements.loading=Lade Errungenschaften\u2026
+achievements.loading=Lade Errungenschaften…
 achievements.unlocked=Freigeschaltet ({0,number,#})
 achievements.locked=Offen ({0,number,#})
 replayServer.listeningFailed=Replay-Server konnte nicht auf Port {0,number,#} gestartet werden
@@ -340,7 +338,7 @@ settings.fa.executableDecorator=Kommandozeilenformat für die Ausführbare Datei
 settings.fa.executionDirectory=Ausführungsverzeichnis
 settings.fa.advanced=Fortgeschritten
 settings.fa.useDefault=Benutze Standardverzeichnis
-settings.fa.chooseDirectory=Wähle\u2026
+settings.fa.chooseDirectory=Wähle…
 settings.general.theme=Stil
 settings.notifications.friendOnline=Freund online
 settings.notifications.friendJoinsGame=Freund tritt Spiel bei
@@ -355,7 +353,7 @@ settings.account.newPassword=Neues Passwort
 settings.account.newPassword.empty=Neues Passwort darf nicht leer sein.
 settings.account.confirmPassword=Passwort bestätigen
 settings.account.confirmPassword.mismatch=Du hast zwei unterschiedliche Passwörter eingegeben.
-settings.account.changePassword.changing=Dein Passwort wird geändert\u2026
+settings.account.changePassword.changing=Dein Passwort wird geändert…
 settings.account.changePassword.success=Dein Passwort wurde geändert.
 settings.account.changePassword.error=Dein Passwort wurde aufgrund eines Fehlers nicht geändert ({0}).
 settings.account.steamAccount=Steam-Konto Verknüpfen
@@ -410,7 +408,7 @@ game.modVersions.twoAndMore={0} und {1,number,#} weitere
 vault.onlineReplays=Online Replays
 vault.localReplays=Lokale Replays
 vault.liveReplays=Live Replays
-vault.replays.loading=Lade Replays\u2026
+vault.replays.loading=Lade Replays…
 vault.replays.newest=Am neuesten
 vault.replays.highestRated=Am höchsten bewertet
 
@@ -546,7 +544,7 @@ game.ratingFormat.minMax={0,number,#} - {1,number,#}
 game.players.format={0,number,#}/{1,number,#}
 game.protected.symbol=\uF023
 game.idFormat=#{0,number,#}
-vault.more=More\u2026
+vault.more=More…
 mapVault.upload.playersFormat={0,number,#}
 mapVault.installButtonFormat=Install ({0})
 map.unknownAuthor=Unbekannter Autor
