Show player idle time in chat
Closes #451

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -424,6 +424,7 @@ userInfo.achievements.errorLoading=Could not load achievements
 userInfo.achievements.errorLDisplaying=Could not display achievements
 userInfo.tooltipFormat={0} ({1,number,#})
 userInfo.ratingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
+userInfo.idleTimeFormat=Last seen: {0}
 userInfo.nameHistory=Name history
 userInfo.nameHistory.date=Date of change
 userInfo.nameHistory.noHistory=The user has never changed their name
