--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -266,6 +266,7 @@ userInfo.ratingHistory.1v1=1v1
 userInfo.ratingHistory.global=Global
 userInfo.achievements=Errungenschaften
 userInfo.ratingFormat=Globales Rating: {0,number,#}\nRanglisten Rating: {1,number,#}
+userInfo.idleTimeFormat=Zuletzt gesehen: {0}
 
 achievements.mostRecent=Neuste Errungenschaften
 achievements.loading=Lade Errungenschaften…
