Allow user to make games private
Also resolves memory leaks caused by listeners related to CreateGameController.
Fixes #850

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -603,3 +603,4 @@ unitDatabase.rackover=Rackover
 unitDatabase.spooky=Spooky
 
 game.player.rating=Eins der Spieler-Ratings
+game.create.onlyFriends=Nur Freunden anzeigen
