--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -622,5 +622,6 @@ game.player.rating=One of the player's ratings
 mapVault.ladder=Ladder maps
 news.showLadderMaps=Show ladder maps
 ranked1v1.showMaps=Show ladder maps
+game.create.onlyFriends=Only show to friends
 settings.language.helpUs.text=Downlord's FAF Client's localization is a community effort. If you want to see the client translated into another language we'd love your help.
 settings.language.helpUs.button=Help us translate
