warn on close if fa is still running, WindowController unit tests
closes #714

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -607,3 +607,5 @@ unitDatabase.rackover=Rackover
 unitDatabase.spooky=Spooky
 
 game.player.rating=Eins der Spieler-Ratings
+exitWarning.title=Forged Alliance wird noch ausgeführt
+exitWarning.message=Bist du sicher, dass du den Client beenden willst?
