--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -621,3 +621,5 @@ game.player.rating=One of the player's ratings
 mapVault.ladder=Ladder maps
 news.showLadderMaps=Show ladder maps
 ranked1v1.showMaps=Show ladder maps
+exitWarning.title=Forged Alliance is still running
+exitWarning.message=Are you sure you want to exit the client?
