--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -174,6 +174,7 @@ game.create.map=Map
 game.create.title=Title (required)
 game.create.password=Password (optional)
 game.create.randomMap=Random map
+game.create.generatedMap=Generate map
 game.create.defaultGameType=Select default
 game.create.rating=Desired rating
 game.create.deselectAll=Deselect all
@@ -255,6 +256,8 @@ game.watchDelayedFormat=Watchable in {0}
 game.replayFileMissing=Replay file missing
 game.idFormat=#{0,number,#}
 game.lineUp=Line-up
+game.mapGeneration.notification.title=Generating map...
+game.mapGeneration.notification.message=Please stand by. (Version: {0}, Seed: {1})
 featuredMod.displayName=Game mod name
 featuredMod.technicalName=Game mod short name
 ladder.searchPrompt=Search rank or player…
