--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -152,6 +152,7 @@ game.create.map = Karte
 game.create.title = Titel (erforderlich)
 game.create.password = Passwort (optional)
 game.create.randomMap = Zufällige Karte
+game.create.generatedMap=Generiere Karte
 game.create.defaultGameType = Standard
 game.create.rating = Erwünschtes Rating
 game.create.deselectAll = Alle abwählen
