Show angry smile after foe name
and group icon if player is in your friend group
Fixes #887

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -638,6 +638,9 @@ ranked1v1.showMaps=Show ladder maps
 game.create.onlyFriends=Only show to friends
 settings.language.helpUs.text=Downlord's FAF Client's localization is a community effort. If you want to see the client translated into another language we'd love your help.
 settings.language.helpUs.button=Help us translate
+userInfo.foe=This player is your foe
+userInfo.friend=This player is your friend
+
 replay.notFoundTitle=Could not find game
 replay.replayNotFoundText=Could not find the game with id "{0}".
 settings.notifications.afterGameReview=After game review
