map vault, searchable properties: add downloads and number of plays
closes #896

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -353,6 +353,8 @@ map.height=Height (in px)
 map.uploadedDateTime=Uploaded
 map.updatedDateTime=Updated
 map.noDescriptionAvailable=The author did not provide a description
+map.playCount=Times played
+map.numberOfDownloads=Downloads
 
 mapPreview.name=Map Name: {0}
 mapPreview.size={0,number,#} x {1,number,#}
