add report entry to user context menu
closes #715

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -123,6 +123,7 @@ chat.userContext.viewLiveReplay=Watch game
 chat.userContext.joinGame=Join game
 chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
+chat.userContext.report=Report
 chat.userContext.kick=Kick…
 chat.userContext.ban=Ban…
 chat.sendMessageTask.title=Sending chat message…
