--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -619,3 +619,8 @@ news.showLadderMaps=Show ladder maps
 ranked1v1.showMaps=Show ladder maps
 settings.language.helpUs.text=Downlord's FAF Client's localization is a community effort. If you want to see the client translated into another language we'd love your help.
 settings.language.helpUs.button=Help us translate
+userInfo.foe=This player is a foe
+vault.modVersions.searchError=
+warn=Attention
+galacticWar.failedLaunching=Tryed starting Galactic War Game but failed launching.
+galacticWar.notLaunchedDueToGameSearchRunning=Galactic War requested a game launch however this is not possible because you are searching for a ladder game or are currently joining a game.
