--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -624,3 +624,4 @@ vault.modVersions.searchError=
 warn=Attention
 galacticWar.failedLaunching=Tryed starting Galactic War Game but failed launching.
 galacticWar.notLaunchedDueToGameSearchRunning=Galactic War requested a game launch however this is not possible because you are searching for a ladder game or are currently joining a game.
+galacticWar.canNotLaunchGameRunning=Can not launch Galactic War as Game(FA) is still opened.
