Ask user to remove replay without map
Fixes #871

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -451,7 +451,7 @@ corruptedMods.show=Show
 
 corruptedReplayFiles.notification=There are corrupted replays on your disk. They were moved to a separate directory for your convenience.
 corruptedReplayFiles.show=Show
-mapNotFound=Map ''{0}'' could not be found on the server nor on this computer.
+mapNotFound=Map ''{0}'' for local replay ''{1}'' could not be found on the server nor on this computer. Do you want to mark it as currupted and move to a seperate folder?
 replayCouldNotBeStarted=Replay {0,number,#} could not be started. See error message below.
 liveReplayCouldNotBeStarted=Live replay could not be started. See error message below.
 duration.seconds={0,number,#}s
@@ -628,6 +628,8 @@ ranked1v1.showMaps=Show ladder maps
 game.create.onlyFriends=Only show to friends
 settings.language.helpUs.text=Downlord's FAF Client's localization is a community effort. If you want to see the client translated into another language we'd love your help.
 settings.language.helpUs.button=Help us translate
+replay.local.markAsCorrupted=Mark as corrupted
+
 tournament.name=Name
 tournament.status.finished=Finished
 tournament.status.running=Running
