Allow author to hide/unrank
Fixes #899

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -642,6 +642,13 @@ tournament.status.openForRegistration=Open
 tournament.status.closedForRegistration=Closed
 tournament.noStartingDate=no starting date set
 tournament.noCompletionDate=not completed yet
+mapVault.owned=Owned Maps
+map.hidden=Hidden
+map.hide=Hide
+map.unrank=Unrank
+map.couldNotHide=Could not hide map.
+map.couldNotUnrank=Could not unrank map.
+modVersion.ranked=Ranked
 tournament.openOnChallonge=Open on challonge.com
 tournament.gameType=Game type:
 tournament.startingAt=Starting at:
