Auto-joining chat-channels
Adding a setting which allows adding multiple chat-channels that will be automatically joined on client startup.
Fixes #816

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -516,6 +516,10 @@ settings.chat.colorMode.custom=Custom: Allow custom colors for specific users
 settings.chat.colorMode.random=Random: Every user has an unique, random color
 settings.chat.foes=Foes
 settings.chat.hideFoe=Hide foe messages
+settings.chat.addAutoJoinChannel=Add channel
+settings.chat.removeAutoJoinChannel=Remove
+settings.chat.autoJoinChannelList=Autojoin channels
+settings.chat.autoJoinChannelPrompt=Enter channel (#channel_name)
 settings.notifications=Notifications
 settings.notifications.enableNotifications=Enable notifications
 settings.notifications.toastPosition=Toast position
