add kick, ban to context menu
close #907

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -132,7 +132,8 @@ chat.userContext.viewLiveReplay=Watch game
 chat.userContext.joinGame=Join game
 chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
-chat.userContext.kick=Kick…
+chat.userContext.kickGame=Kick from game…
+chat.userContext.kickLobby=Kick from lobby…
 chat.userContext.ban=Ban…
 chat.sendMessageTask.title=Sending chat message…
 chat.sendActionTask.title=Sending chat action…
@@ -653,6 +654,10 @@ userInfo.friend=This player is your friend
 replay.notFoundTitle=Could not find game
 replay.replayNotFoundText=Could not find the game with id "{0}".
 settings.notifications.afterGameReview=After game review
+
+chat.userContext.reason=reason for ban
+chat.userContext.duration=duration for ban
+chat.userContext.success=sucessfully banned
 
 tournament.name=Name
 tournament.status.finished=Finished
