Add tournaments tab Fixes #26

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -36,6 +36,7 @@ main.play=Play
 main.vault=Vault
 main.units=Units
 main.leaderboards=Leaderboards
+main.tournaments=Tournaments
 
 leaderboard.ranked1v1=1v1 Rating
 leaderboard.global=Global Rating
@@ -625,3 +626,9 @@ ranked1v1.showMaps=Show ladder maps
 game.create.onlyFriends=Only show to friends
 settings.language.helpUs.text=Downlord's FAF Client's localization is a community effort. If you want to see the client translated into another language we'd love your help.
 settings.language.helpUs.button=Help us translate
+tournament.name=Name
+tournament.startDate=Start date
+tournament.endDate=End date
+tournament.participantCount=Participants
+tournament.gameMode=Game mode
+tournament.details=Details
