--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -16,6 +16,8 @@ notAvailable=n/a
 reset=Reset
 refresh=Refresh
 port=Port
+unknown=unknown
+dateTime={0,date} {0,time}
 
 view.tiles=Tiles
 view.table=Table
@@ -627,8 +629,9 @@ game.create.onlyFriends=Only show to friends
 settings.language.helpUs.text=Downlord's FAF Client's localization is a community effort. If you want to see the client translated into another language we'd love your help.
 settings.language.helpUs.button=Help us translate
 tournament.name=Name
-tournament.startDate=Start date
-tournament.endDate=End date
-tournament.participantCount=Participants
-tournament.gameMode=Game mode
-tournament.details=Details
+tournament.status.finished=Finished
+tournament.status.running=Running
+tournament.status.openForRegistration=Open
+tournament.status.closedForRegistration=Closed
+tournament.noStartingDate=no starting date set
+tournament.noCompletionDate=not completed yet
