--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -461,6 +461,7 @@ duration.hourMinutes={0,number,#}h {1,number,#}min
 vsSeparator=\u0020vs\u0020
 # suppress inspection "TrailingSpacesInProperty"
 textSeparator=,\u0020
+secondAgo={0,number,#} second ago
 secondsAgo={0,number,#} seconds ago
 minuteAgo={0,number,#} minute ago
 minutesAgo={0,number,#} minutes ago
