Display message in statusbar when updating game files

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -377,6 +377,7 @@ tutorial.description=Description
 chat.connecting.message=Connecting to chat…
 updater.binary.taskTitle=Preparing game files
 updater.taskTitle=Preparing game
+updater.readingFileList=Reading file list
 updater.downloadingFile=Downloading {0}
 updater.patchingFile=Patching {0}
 
