Fix error messages when loading maps/mods failed

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -611,6 +611,7 @@ search.sort.descending=descending
 query.contains=contains
 search.sort=Sort by
 vault.mods.searchError=Mods could not be loaded
+vault.maps.searchError=Maps could not be loaded
 noDateAvailable=No date available
 map.created=Created:
 modType.ui=Ui mod
