--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -639,3 +639,7 @@ tournament.status.openForRegistration=Open
 tournament.status.closedForRegistration=Closed
 tournament.noStartingDate=no starting date set
 tournament.noCompletionDate=not completed yet
+voting.checkForVotesFailed=Check for ongoing election/votings failed.
+voting.voteFound=Ongoing election/vote found
+voting.voteFoundMessage=There are votes ongoing for the following topics:<br/>{0}
+voting.vote=Vote
