Show rate game button on game end
Fixes #729

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -508,7 +508,7 @@ settings.notifications.toastPreview=Preview
 settings.notifications.toastPreview.title=Toast Preview
 settings.notifications.toastPreview.text=This is how it looks like.
 settings.notifications.toastScreen=Screen
-settings.notifications.displayToast=Display toast
+settings.notifications.displayNotification=Display notification
 settings.notifications.playSound=Play sound
 settings.notifications.pmReceived=PM received
 settings.notifications.ranked1v1=Ranked 1v1 available
@@ -632,6 +632,10 @@ ranked1v1.showMaps=Show ladder maps
 game.create.onlyFriends=Only show to friends
 settings.language.helpUs.text=Downlord's FAF Client's localization is a community effort. If you want to see the client translated into another language we'd love your help.
 settings.language.helpUs.button=Help us translate
+replay.notFoundTitle=Could not find game
+replay.replayNotFoundText=Could not find the game with id "{0}".
+settings.notifications.afterGameReview=After game review
+
 tournament.name=Name
 tournament.status.finished=Finished
 tournament.status.running=Running
