Improve i18n date/time handling

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -17,7 +17,7 @@ reset=Reset
 refresh=Refresh
 port=Port
 unknown=unknown
-dateTime={0,date} {0,time}
+dateWithTime={0} at {1}
 
 view.tiles=Tiles
 view.table=Table
