--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -659,3 +659,7 @@ tournament.startingAt=Starting at:
 tournament.completedAt=Completed at:
 game.missionName=Mission
 query.notContains=not contains
+
+game.couldNotJoin=Could not join game with id id ''{0}''.
+discord.disallowJoins=Disallow players joining via Discord
+replay.couldNotOpen=Replay with id ''{0}'' , could not be opened.
