--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -659,3 +659,11 @@ tournament.startingAt=Starting at:
 tournament.completedAt=Completed at:
 game.missionName=Mission
 query.notContains=not contains
+
+report.logLinesToBeSent=Log lines to be sent
+report.feedback=Tell us what happend or what is wrong:
+report.contact=Feel free to contact me
+report.cancel=Cancel
+report.submit=Submit
+report.severity=Select severity
+menu.support=Support
