--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -4,9 +4,12 @@ percentage = {0,number,\#.\#}%
 report = 报告
 errorDetails = 错误细节
 cancel = 取消
+dismiss = 
+errorTitle = 呃哦！
 # Alternative: {0}个中{1}个
 bytesProgress = 在{0}个以内{1}个已经
 messageFromServer = 来自服务器的消息
+more = 
 searchResult = 搜索结果
 search = 查找
 back = 返回
@@ -16,6 +19,7 @@ refresh = 刷新
 view.tiles = 磁贴
 view.table = 表格
 userMenu.logOut = 退出
+userMenu.showProfile = 用户资料
 menu.feedback = 反馈
 menu.exit = 离开
 menu.settings = 选项
@@ -25,43 +29,125 @@ menu.revealModFolder = 打开修改文件夹
 main.community.news = 最新消息
 main.chat = 聊天
 main.play = 游戏
+main.vault = 
 main.units = 选择角色
 main.leaderboards = 排行榜
-leaderboard.ranked1v1 = 1对1等级
+leaderboard.ranked1v1 = 1对1评级
 leaderboard.global = 全球评级
 play.custom = 自定义游戏
 play.ranked1v1 = 1对1排名赛
 play.coop = 合作
 leaderboard.failedToLoad = 排行榜无法加载
-leaderboard.loading = 加载排行榜u2026
+leaderboard.loading = 加载排行榜……
+coop.host.title = 
 coop.host.button = 主机游戏
 coop.leaderboard = 排行榜
 coop.openGames = 打开游戏
+coop.leaderboard.rank = ＃
 coop.leaderboard.players = 玩家
 coop.leaderboard.names = 名字
+coop.leaderboard.secondary = 次要目标
 coop.leaderboard.time = 时间
 coop.leaderboard.replay = 重播
+coop.leaderboard.allPlayers = 所有
+coop.leaderboard.singlePlayer = 一位玩家
 coop.leaderboard.numberOfPlayersFormat = {0,numbe﻿r,\\\#} 玩家
+coop.leaderboard.couldNotLoad = 合作排行榜无法加载。
+coop.couldNotLoad = 合作任务无法加载：{0}
+ranked1v1.players = 玩家（至少玩{0}场比赛）
 ranked1v1.play = 游戏
 ranked1v1.cancel = 取消
+ranked1v1.choseFactions.title = 
+ranked1v1.choseFactions.description = 当比赛开始时，你选择的一个派系将被分配给你。
+ranked1v1.rating.title = 你的评分等级
+ranked1v1.rankingDistribution = 评级分布
+ranked1v1.rankingDistribution.x = 评级
 ranked1v1.rankingDistribution.y = 玩家
+ranked1v1.ratingProgress.stillLearning = 该系统仍在学习你的技能。玩更多的游戏来完成进度。
+ranked1v1.ratingHint.low = 
+ranked1v1.ratingHint.moderate = 您的评分适中。继续学习游戏机制 予以提高。
+ranked1v1.ratingHint.good = 你的评价很好。专注于细节改进。
+ranked1v1.ratingHint.high = 您的评价很高。为什么不帮助别人改进？
+ranked1v1.ratingHint.top = 恭喜！你是一名顶尖球员。分享你的经验。
+ranked1v1.gamesPlayed = 玩过的游戏
+ranked1v1.ranking = 你的等级
+ranked1v1.rankingOutOf = 超出{0,number,＃}玩家
+ranked1v1.searching = 
+ranked1v1.winLossRation = 胜利/失败比率
+ranked1v1.rankingFormat = ＃{0,number,＃}
+ranked1v1.notification.title = 
+ranked1v1.notification.message = 点击此处打开1v1选项卡
 statusBar.chatConnected = 进入聊天
-statusBar.chatConnecting = 载入聊天u2026
+statusBar.chatConnecting = 载入聊天……
 statusBar.chatDisconnected = 离开聊天
+statusBar.fafConnected = FAF连接
+statusBar.fafConnecting = 连接到FAF……
+statusBar.fafDisconnected = FAF断开连接
+statusBar.reconnect = 重新连接
+statusBar.taskWithoutMessage.format = {0}
+statusBar.taskWithMessage.format = {0} ：{1}
+news.authoredFormat = 
 chat.noOpenChats = 没有聊天记录
 chat.joinAChannel = 进入聊天室
 chat.channelNamePrompt = 比如：\#aeolus
-chat.messagePrompt = 请留短信u2026
-chat.searchPrompt = 搜索u2026
+chat.messagePrompt = 请留短信……
+chat.searchPrompt = 搜索……
 # Fuzzy
 chat.category.moderators = 监管人
 chat.category.friends = 朋友群
+chat.category.foes = 敌人
 chat.category.others = 其它
 # Fuzzy
 chat.category.chatOnly = 仅聊天
+chat.userContext.noAvatar = 没有头像
+chat.userContext.userInfo = 显示用户信息
 chat.userContext.privateMessage = 私人信息
+chat.userContext.removeColor = 删除自定义颜色
+chat.userContext.addFriend = 添加好友
+chat.userContext.removeFriend = 
+chat.userContext.addFoe = 
+chat.userContext.removeFoe = 
+chat.userContext.viewLiveReplay = 观看比赛
+chat.userContext.joinGame = 加入游戏
+chat.userContext.viewReplays = 查看重播
+chat.userContext.inviteToGame = 邀请参加比赛
+chat.userContext.kick = 开除2026
+chat.userContext.ban = 禁止2026
+chat.sendMessageTask.title = 发送聊天消息……
+chat.sendActionTask.title = 
+chat.clanTagFormat = [{0}]
+chat.imageUploadTask.title = 
+chat.userCount = {0,number,\#}用户（输入搜索）
+chat.mapName = 地图名称：{0}
+chat.filter.filter = 过滤
+chat.filter.prompt = 
+chat.filter.clan = 战队
+chat.filter.username = 
+chat.filter.minRating = 最低限度评级
+chat.filter.maxRating = 最高限度评级
+chat.operator = 
+clan.clanName = 名称
+clan.description = 描述
+clan.leader = 领袖
+clan.clanMembers = 成员
+clan.messageLeader = 发送消息给战队领袖
+clan.visitPage = 
+chat.privateMessage.playerLeft = {0}现在处于离线状态
+chat.privateMessage.playerReconnect = 
+chat.privateMessage.globalRating = 全球评级
+chat.privateMessage.ladder1v1Rating = 1对1等级
+chat.privateMessage.ratingFormat = {0,number,＃}
+chat.privateMessage.gamesPlayed = 玩过的游戏
+chat.privateMessage.currentlyPlaying = 正在玩
 chat.privateMessage.game.players = 玩家
+chat.privateMessage.achievements.unlocked = 成绩解锁
+chat.privateMessage.achievements.unlockedFormat = {0,number,＃}/{1,number,＃}
+games.create = 创建游戏
+games.create.minRating = 最低限度
+games.create.maxRating = 最高限度
 games.showPasswordProtectedGames = 显示受密码保护的游戏
+games.noGamesAvailable = 没有开放的游戏。你为什么不创建一个？
+games.couldNotJoin = 游戏无法加入。看到下面的错误信息。
 game.create.connecting = 等待连接
 game.create.disconnected = 请连接
 game.create.map = 地图
@@ -69,22 +155,88 @@ game.create.title = 标题（必填）
 game.create.password = 密码（可选）
 game.create.randomMap = 随机地图
 game.create.defaultGameType = 选择默认
+game.create.rating = 期望的玩家评级
 game.create.deselectAll = 取消全部选择
 game.create.reload = 重新加载
 game.create.create = 创建
-game.create.searchMap = 搜索u2026
+game.create.searchMap = 搜索……
+game.create.gameType = 游戏类型
+game.create.mods = 修改
+game.create.titleMissing = 缺少标题
+game.create.featuredModMissing = 
+game.create.failed = 游戏无法创建。
+game.rehost.failed = 重新游戏失败。
+game.title = 标题
 game.players = 玩家
+game.map = 地图
+game.rating = 评级
+game.ratingFormat.minOnly = >\={0,number,＃}
+game.ratingFormat.maxOnly = <\={0,number,＃}
+game.ratingFormat.minMax = {0,number,\#}  -  {1,number,\#}
+game.joinGameRatingConfirmation.title = 
+game.joinGameRatingConfirmation.text = 此游戏适用于评分在{0,number,\#}和{1,number,\#}之间的玩家，但您的当前评分为{2,number,\#}。\n \n您确定要加入？
+game.type = 类型
+game.mods = 修改
+game.players.format = {0,number,＃}/{1,number,＃}
+game.detail.players.format = {0,number,\#}/{1,number,\#}玩家
+game.join = 加入
 game.cancel = 取消
+game.host = 东家
+game.tooltip.teamTitle = 团队{0}（{1,number,＃}）
+game.tooltip.teamTitleNoTeam = 没有团队
+game.tooltip.observers = 观众
+game.protected.symbol = \\uF023
 game.join.passwordPrompt = 输入游戏密码
 game.join.passwordWrong = 密码错误
+game.start.couldNotStart = 游戏无法开始。见下面的错误细节。
+game.full = 游戏已满
+game.full.action = 点击打开游戏
+game.mods.twoAndMore = {0}和{1,number,\#}更多
+game.gameStatus = 游戏状态
+game.gameStatus.playing = 
+game.gameStatus.lobby = 等待比赛开始
+game.gameStatus.none = 没有
+game.id = ID
+game.time = 
+game.duration = 持续时间
+game.gameType = 游戏类型
+game.startTime = 开始时间
+game.endTime = 结束时间
+game.validity = 合法性
+game.victoryCondition = 胜利的条件
 game.player.id = 玩家ID
 game.player.username = 玩家的名字
 game.player.faction = 玩家派系
 game.player.team = 玩家团队
 game.player.startSpot = 玩家开始位置
 game.player.score = 玩家得分
+game.host.id = 
+game.host.username = 
+game.map.height = 地图高度（以像素为单位）
+game.map.width = 地图宽度（以像素为单位）
+game.map.version = 地图版本
+game.map.folderName = 地图文件夹名称
+game.map.isRanked = 
+game.map.displayName = 地图名称
+game.options = 游戏选项
+game.optionKey = 
+game.optionValue = 
 game.chat = 聊天
+game.chat.gameTime = 
+game.chat.sender = 寄件人
+game.chat.message = 信息
+game.onMapFormat = 
+game.onUnknownMap = 在未知的地图上
+game.downloadMoreInfo = 下载更多信息（{0}）
 game.watch = 观看
+game.watchButtonFormat = 观看（{0}）
+game.watchDelayedFormat = 可在{0}中看到
+game.replayFileMissing = 
+game.idFormat = ＃{0,number,＃}
+game.lineUp = 
+featuredMod.displayName = 
+featuredMod.technicalName = 
+ladder.searchPrompt = 搜索排名或玩家……
 login.title = FA Forever 登录
 login.name = 用户名
 login.password = 密码
@@ -93,13 +245,217 @@ login.create = 创建帐号
 login.forgot = 忘记登录
 login.button.login = 登录
 login.button.cancel = 取消
-login.progress.message = 在登录u2026
+login.progress.message = 在登录……
+vault.maps = 地图
+vault.mods = 修改
+vault.onlineReplays = 在线重播
+vault.localReplays = 本地重播
+vault.liveReplays = 现场重播
+vault.replays.loading = 正在载入重播……
+vault.replays.newest = 
+vault.replays.highestRated = 
+vault.replays.displayQuery = 显示搜索查询
+vault.replays.queryPrompt = 在上面构建查询或手动输入查询
+vault.replays.searchError = 搜索重播时发生错误。
+vault.more = 
+modVault.newestMods = 最新的修改
+modVault.install = 安装
+modVault.uninstall = 卸载
+modVault.installationFailed = 无法安装修改''{0}'：{1}
+modVault.couldNotDeleteMod = 修改''{0}''无法删除：{1}
+modVault.loadingMods = 加载修改……
+modVault.upload.chooseDirectory = 选择修改目录
+modVault.upload = 上传修改……
+modVault.upload.title = 上传mod
+modVault.upload.hint = 值从mod_info.lua读取
 modVault.upload.modVersion = 版
+modVault.upload.modUid = UID
+modVault.upload.uploadNow = 立即上传
+modVault.upload.uploading = 正在上传修改……
+modVault.upload.complete = 上传完成
+modVault.upload.failed = Mod上传失败。服务器出现以下错误：\n \n {0}
+modVault.upload.retry = 重试
+modVault.upload.compressing = 压缩修改……
+mapVault.upload.title = 上传地图
+mapVault.upload.hint = 值从* _scenario.lua中读取
 mapVault.upload.mapVersion = 版
+mapVault.upload.reading = 阅读地图……
+mapVault.upload = 
+mapVault.upload.uploadNow = 立即上传
+mapVault.upload.uploading = 上传地图……
+mapVault.upload.compressing = 压缩地图……
+mapVault.upload.complete = 上传完成
+mapVault.upload.complete.hint = 
+mapVault.upload.failed = 地图无法上传。服务器出现以下错误：\n \n {0}
+mapVault.upload.mapSize = 
+mapVault.upload.players = 玩家
+mapVault.upload.chooseDirectory = 选择地图目录
+mapVault.upload.sizeFormat = {0,number,\#} km x {1,number,\#} km
+mapVault.upload.playersFormat = {0,number,＃}
+mapVault.upload.rankedConfirm = 我确认这张地图选择公正，并且不包含禁止的代码。我知道违规会导致禁令。取消选中此项会导致未排序的地图。
+mapVault.upload.retry = 重试
+mapVault.loadingMaps = 载入地图……
+mapVault.mostLikedMaps = 最喜欢的
+mapVault.newestMaps = 最近的
+mapVault.mostPlayed = 
+mapVault.installButtonFormat = 安装（{0}）
+mapVault.uninstall = 卸载
+mod.description = 描述
+mod.comments = 注释
+map.author = 制图者
+map.unknownAuthor = 未知的作者
+map.name = 名称
+map.description = 描述
+map.size = 
+map.rating = 评级
+map.players = 玩家
 map.version = 版
+map.folderName = 文件夹名称
+map.ranked = 排名
+map.reviews = 评测
+map.updated = 更新
+map.maxPlayers = 最高玩家人数
+map.width = 宽度（以像素为单位）
+map.height = 高度（以像素为单位）
+map.uploadedDateTime = 
+map.updatedDateTime = 更新
+mapPreview.name = 地图名称：{0}
+mapPreview.size = 
+mapPreview.loadFailure.message = 无法加载地图预览
+replays.loadingOnlineTask.title = 加载在线的重播……
+replays.loadingOnlineTask.failed = 在线重播无法加载。
+replays.loadingLocalTask.title = 载入本地的重播……
+replays.loadingLocalTask.failed = 本地播放无法加载。
+replays.live.loadFailure.title = 无法加载实况回放
+replays.live.loadFailure.message = 实况重播未能发布
+tutorial.map = 地图
+tutorial.title = 标题
+tutorial.length = 
+tutorial.description = 描述
+chat.connecting.message = 
+updater.binary.taskTitle = 准备游戏文件
+clientUpdateAvailable.notification = 客户端{0}可用（{1}）
+clientUpdateAvailable.downloadAndInstall = 
+clientUpdateAvailable.releaseNotes = 版本说明
+clientUpdateDownloadFailed.notification = 下载客户端更新时出错
+clientUpdateDownloadFailed.retry = 重试
+updateCheckTask.title = 检查更新
+clientUpdateCheckTask.title = 检查客户端更新
+clientUpdateDownloadTask.title = 正在下载客户端更新
+mapDownloadTask.title = 正在下载地图{0}
+mapReplayTask.title = 正在下载重播{0}
+downloadingModTask.downloading = 正在下载修改 {0}
+downloadingModTask.unzipping = 解压缩到{0}
+missingGamePath.notification = 钢铁联盟无法找到
+missingGamePath.locate = 
+missingGamePath.chooserTitle = 找到钢铁同盟的目录
+notifications.empty = 您没有任何通知
+stats.air = 空军
+stats.land = 陆军
 stats.naval = 海军
+stats.tech1 = 技术水平一
+stats.tech2 = 技术水平二
+stats.tech3 = 技术水平三
+stats.custom = 自定义
+stats.ranked1v1 = 
+userInfo.general = 一般
+userInfo.statistics = 统计
+userInfo.ratingGlobal = 全球评级
+userInfo.rating1v1 = 1对1评级
+userInfo.winLossPerFaction = 每派赢/输
+userInfo.builtByTech = 
+userInfo.builtByCategory = 单位建成
+userInfo.gamesPlayed = 玩过的游戏
 userInfo.wins = 胜
+userInfo.losses = 
+userInfo.ratingOverTime = 评级发展
+userInfo.ratingHistory.1v1 = 1对1
+userInfo.ratingHistory.global = 全球
+userInfo.achievements = 成绩
+userInfo.tooltipFormat = 
+userInfo.ratingFormat = 
+user.status.hosting = 东家：{0}
+user.status.waiting = 在：{0}中等待
+user.status.playing = 播放：{0}
+achievement.stepsFormat = {0,number,＃}/{1,number,＃}
+achievements.mostRecent = 近期成绩
+achievements.loading = 加载成绩……
+achievements.unlocked = 解锁（{0,number,\#}）
+achievements.locked = 打开（{0，number，＃}）
+replayServer.listeningFailed = 重放服务器无法在端口{0,number,\#}上启动
+replayServer.retry = 重试
+replayServer.unreachable = 重放服务器无法访问，游戏无法录制。
+corruptedMods.notification = Mod已损坏，无法加载：{0}。
+corruptedMods.show = 显示
+corruptedReplayFiles.notification = 磁盘上存在损坏的重播。他们被转移到一个另外的目录，为了您的方便。
+corruptedReplayFiles.show = 显示
+mapNotFound = 无法在服务器或此计算机上找到地图“{0}”。
+replayCouldNotBeStarted = 重播{0,number,\#}无法启动。看到下面的错误信息。
+liveReplayCouldNotBeStarted = 实况重播无法开始。看到下面的错误信息。
+duration.seconds = {0,number,＃}s
+duration.minutesSeconds = {0,number,\#}分钟{1,number,\#}秒钟
+duration.hourMinutes = {0,number,\#}小时{1,number,\#}分钟
+# suppress inspection "TrailingSpacesInProperty"
+vsSeparator = 对
+# suppress inspection "TrailingSpacesInProperty"
+textSeparator = ，
+secondsAgo = {0,number,＃}秒前
+minuteAgo = {0,number,＃}分钟前
+minutesAgo = {0,number,＃}分钟前
+hourAgo = {0,number,＃}小时前
+hoursAgo = {0,number,＃}小时前
+dayAgo = {0,number,＃}一天前
+daysAgo = {0,number,＃}天前
+monthAgo = {0,number,＃}月前
+monthsAgo = {0,number,＃}月前
+yearAgo = {0,number,＃}年前
+yearsAgo = {0,number,＃}年前
+settings.languages.restart.message = 您更改了语言。\n这需要重新启动。
+settings.languages.restart = 
+settings.languages.system = 自动
+settings.time.system = 自动
+settings.time.12 = 12小时制
+settings.time.24 = 24小时制
+settings.windowTitle = 设置
+settings.general = 一般
+settings.general.rememberLastTab = 记住我上次打开的选项卡
 settings.chat = 聊天
+settings.chat.maxMessages = 消息历史大小
+settings.chat.previews = 
+settings.chat.previewImages = 将鼠标移至在URL上显示预览图像
+settings.chat.colors = 颜色
+settings.chat.timeFormat = 时间格式
+settings.chat.colorMode.default = 默认：使用所有用户的默认颜色
+settings.chat.colorMode.custom = 自定义：允许特定用户的自定义颜色
+settings.chat.colorMode.random = 随机：每个用户都有独特的随机颜色
+settings.chat.foes = 敌人
+settings.chat.hideFoe = 隐藏敌人消息
+settings.notifications = 短消息
+settings.notifications.enableNotifications = 启用通知
+settings.notifications.toastPosition = 弹跳窗口位置
+settings.notifications.toastScreen = 屏幕
+settings.notifications.playSound = 音响效果
+settings.notifications.pmReceived = 收到私信
+settings.notifications.ranked1v1 = 
+settings.sounds = 声音
+settings.sounds.enable = 启用声音
+settings.fa.title = 
+settings.fa.gameConfiguration = 游戏配置
+settings.fa.autoDownloadMaps = 自动下载缺失的地图
+settings.fa.gamePort = 游戏端口
+settings.fa.gameLocation = 游戏地点（例如“C\:\\\\Games\\\\Supreme Commander - Forged Alliance”）
+settings.fa.executableDecorator = 可执行文件的命令行格式
+settings.fa.executionDirectory = 
+settings.fa.advanced = 高级
+settings.fa.useDefault = 使用默认目录
+settings.fa.chooseDirectory = 选择……
+settings.general.theme = 
+settings.notifications.friendOnline = 朋友在线
+settings.notifications.friendJoinsGame = 
+settings.notifications.friendPlaysGame = 
+settings.notifications.friendOffline = 朋友离线
+settings.screenFormat = 屏幕{0,number,＃}
+settings.account = 帐户
 settings.account.changePassword = 更改密码
 settings.account.currentPassword = 当前密码
 settings.account.currentPassword.empty = 当前密码不能为空。
@@ -107,10 +463,44 @@ settings.account.newPassword = 新密码
 settings.account.newPassword.empty = 新密码不能为空。
 settings.account.confirmPassword = 确认密码
 settings.account.confirmPassword.mismatch = 你输入了两个不同的密码。
-settings.account.changePassword.changing = 您的密码正在更改u2026
+settings.account.changePassword.changing = 您的密码正在更改……
 settings.account.changePassword.success = 您的密码已更改。
 settings.account.changePassword.error = 您的密码未因错误而改变（{0}）。
+settings.account.steamAccount = 
+settings.account.steamAccount.prompt = 您可以在此链接您的Steam帐户。
+settings.account.steamAccount.linkToSteam = 
+settings.account.username = FAF用户名
+settings.account.username.change = 更改用户名
+urlPreviewDescription = {0}（{1}）
+achievement.unlockedTitle = 成就解锁！
+friend.nowOnlineNotification.title = {0}现已上线
+friend.nowOnlineNotification.action = 点击这里开始对话。
+friend.nowOfflineNotification.title = {0}现在处于离线状态
+friend.joinedGameNotification.title = {0}加入了{1}
+friend.joinedGameNotification.action = 点击此处加入。
+query.equals = 
+query.notEquals = 不是
+query.greaterThan = 大于
+query.greaterThanEquals = 至少是
+query.lessThan = 小于
+query.lessThanEquals = 是最多的
+query.in = 之一
+query.notIn = 没有
 query.and = 和
+query.or = 
+query.addCriteria = 添加标准
+query.removeCriteria = 删除标准
+query.valueHint = 
+review.send = 发送评论
+review.starsTip.one = 根本不喜欢它
+review.starsTip.two = 
+review.starsTip.three = 一般
+review.starsTip.four = 我喜欢它
+review.starsTip.five = 我很喜欢它
+reviews.title = 评测
+reviews.myReview = 我的评论
+reviews.totalReviewers = {0,number,＃}总数
+reviews.create = 写评论
 reviewScore.five = 五
 reviewScore.four = 四
 reviewScore.three = 三
@@ -119,7 +509,107 @@ reviewScore.one = 一
 coop.watchReplay = 重播
 ranked1v1.you = 你
 game.join.passwordTitle = 该游戏受密码保护
+modVault.highestRated = 
+modVault.highestRatedUiMods = 推荐的UI模块
+mod.detail.reviews = 评测
+mod.detail.moreInfo = 更多信息
+mod.detail.updated = 更新
+mod.detail.size = 
+mod.detail.installations = 安装
 mod.detail.version = 版
+mod.detail.dependencies = 包依赖关系
+map.noDescriptionAvailable = 作者没有提供描述
+updater.taskTitle = 
+updater.downloadingFile = 正在下载{0}
+updater.patchingFile = 修补{0}
+serInfo.statistics.errorLoading = 无法加载统计信息
+userInfo.achievements.errorLoading = 无法加载成绩
+userInfo.achievements.errorLDisplaying = 无法显示成绩
+userInfo.nameHistory = 曾用名
+userInfo.nameHistory.date = 
+userInfo.nameHistory.noHistory = 用户从未改变过他们的名字
+userInfo.nameHistory.name = 名称
+userInfo.nameHistory.errorLoading = 名称历史记录无法加载。
+settings.chat.notifyOnAtMentionOnly = 只有在@用户名称被提到时才会通知。
+settings.chat.notifications = 短消息
+mod.displayName = 
+mod.author = 
+mod.uploadedDateTime = 
+mod.updatedDateTime = 
+mod.id = 
+mod.uid = 
+mod.type = 
+mod.ranked = 
+mod.filename = 
 mod.version = 版
+UIDNotExecuted = UID二进制文件无法执行。它可能已被删除，未找到或无法访问。
+replay.copyUrl = 复制重播网址
+game.showRatingChange = 显示评分变化
+game.notValid = 游戏未被评级
+game.notRatedYet = 
+game.ended = 你喜欢“{0}”吗？ 让其他人知道！
+game.rate = 立即评分
+tiles.comparator.playersDescending = 按玩家人数降序排序
+tiles.comparator.playersAscending = 按玩家人数升序排序
+tiles.comparator.nameDescending = 按名称降序排序
+tiles.comparator.nameAscending = 按名称升序排序
+search.sort.ascending = 上升
 search.sort.descending = 降序
+query.contains = 包含
+search.sort = 排序方式
+vault.mods.searchError = 修改无法加载
+noDateAvailable = 
+map.created = 
+modType.ui = 用户界面修改
+modType.sim = 
 menu.connect = 正在连接
+gameChosen.invalidPath = 路径无效
+gameChosen.couldNotLocatedGame = 指定的位置不包含有效的最高指挥官：钢铁联盟安装。
+userInfo.statistics.errorLoading = 无法加载统计信息
+settings.general.unitDatabase = 单位数据库
+unitDatabase.rackover = Rackover
+unitDatabase.spooky = 
+game.player.rating = 玩家的评分之一
+mapVault.ladder = 
+news.showLadderMaps = 
+ranked1v1.showMaps = 
+port = 
+login.serverHost = 
+login.replayServerHost = 
+login.apiBaseUrl = API基准网址
+games.showModdedGames = 
+chat.userContext.copyUsername = 
+userInfo.idleTimeFormat = 
+map.playCount = 
+map.numberOfDownloads = 
+map.versionFormat = 
+settings.appearance = 
+settings.language = 
+# Noun
+settings.notifications.toastPreview = 
+settings.notifications.toastPreview.title = 
+settings.notifications.toastPreview.text = 
+settings.language.helpUs.text = 
+settings.language.helpUs.button = 
+settings.chat.chatFormat = 
+settings.chat.chatFormat.extended = 
+settings.chat.chatFormat.compact = 
+game.create.onlyFriends = 
+unknown = 
+dateWithTime = 
+main.tournaments = 
+tournament.name = 
+tournament.status.finished = 
+tournament.status.running = 
+tournament.status.openForRegistration = 
+tournament.status.closedForRegistration = 
+tournament.noStartingDate = 
+tournament.noCompletionDate = 
+loading = 
+updater.readingFileList = 
+secondAgo = 
+vault.maps.searchError = 
+settings.notifications.displayNotification = 
+replay.notFoundTitle = 
+replay.replayNotFoundText = 
+settings.notifications.afterGameReview = 
