Update messages_cs.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -408,7 +408,7 @@ monthAgo = před {0,number,\#} měsícem
 monthsAgo = před {0,number,\#} měsíci
 yearAgo = před {0,number,\#} rokem
 yearsAgo = před {0,number,\#} roky
-settings.languages.restart.message=Jakyz byl změněn. Je vyžadován restart.
+settings.languages.restart.message = Jakyz byl změněn. Je vyžadován restart.
 settings.languages.restart = Restart
 settings.languages.system = Automaticky
 settings.time.system = Automaticky
@@ -416,7 +416,6 @@ settings.time.12 = 12h
 settings.time.24 = 24h
 settings.windowTitle = Nastavení
 settings.general = Obecné
-settings.language=Jazyk
 settings.general.rememberLastTab = Pamatovat si poslední otevřenou záložku
 settings.chat = Chat
 settings.chat.maxMessages = Velikost historie zpráv
@@ -433,7 +432,6 @@ settings.notifications = Oznámení
 settings.notifications.enableNotifications = Povolit oznámení
 settings.notifications.toastPosition = Pozice
 settings.notifications.toastScreen = Obrazovka
-settings.notifications.displayNotification=Zobrazit oznámení
 settings.notifications.playSound = Přehrát zvuk
 settings.notifications.pmReceived = Soukromá zpráva
 settings.notifications.ranked1v1 = Dostupný 1v1 hodnocený hra
@@ -443,7 +441,7 @@ settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = Nastavení hry
 settings.fa.autoDownloadMaps = Automaticky stahovat chybějící mapy
 settings.fa.gamePort = Herní port
-settings.fa.gameLocation = Umístění hry (například\: "C\:\\\\Games\\\\Supreme Commander - Forged Alliance")
+settings.fa.gameLocation = Umístění hry
 settings.fa.executableDecorator = Formát příkazovéo řádku pro spuštění
 settings.fa.executionDirectory = Složka spuštění
 settings.fa.advanced = Pokročílé
@@ -578,3 +576,39 @@ login.serverHost = Server host
 login.replayServerHost = Replay server host
 login.apiBaseUrl = API base URL
 games.showModdedGames = Ukázat módované hry
+chat.userContext.copyUsername = Zkopírovat jméno
+userInfo.idleTimeFormat = Naposledy online\: {0}
+map.playCount = Hráno
+map.numberOfDownloads = Staženo
+map.versionFormat = v{0}
+settings.appearance = Vzhled
+settings.language = Jazyk
+# Noun
+settings.notifications.toastPreview = Náhled
+settings.notifications.toastPreview.title = Ukázka upozornení
+settings.notifications.toastPreview.text = Takto to vypadá.
+settings.language.helpUs.text = Překlad Downlordova FAF klienta je komunitní záležitost. Pokud ho chceš mít přeložený do jiného jazyka, uvítáme Tvou pomoc.
+settings.language.helpUs.button = Pomoz nám s překladem
+settings.chat.chatFormat = Formát chatu
+settings.chat.chatFormat.extended = Rozšířený
+settings.chat.chatFormat.compact = Kompaktní
+game.create.onlyFriends = Ukázat pouze přátelům
+unknown = neznámý
+dateWithTime = v
+main.tournaments = Turnaje
+tournament.name = Název
+tournament.status.finished = Dokončené
+tournament.status.running = Probíhající
+tournament.status.openForRegistration = Otevřené
+tournament.status.closedForRegistration = Uzavřené
+tournament.noStartingDate = Nestanoveno datum zahájení
+tournament.noCompletionDate = ještě nedokončen
+loading = Načítání...
+# Could I have a little more context to this, where its used?
+updater.readingFileList = 
+secondAgo = před {0,number,\#} sekundy
+vault.maps.searchError = Mapy nešly načíst
+settings.notifications.displayNotification = Zobrazit oznámení
+replay.notFoundTitle = Nelze nalézt hru
+replay.replayNotFoundText = Nelze nalézt hru s ID "{0}"
+settings.notifications.afterGameReview = Pozápasová recenze
